# ltedu

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  ltedu.code-workspace  main.go
.clinerules/: frontend-patterns.md  http.md
android/: .gitignore  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
app-store/: README.md
cli/: main.go
cmd/: main.go
common/: err.go
conf/: config.go
deploy/: docker-compose.prod.yml
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: api.rs  auth.rs  cache.rs  mod.rs
desktop/src-tauri/src/db/: mod.rs
docs/: ALIYUN_OSS_GUIDE.md  API_DOCUMENTATION_PAGE_PLAN.md  ARCHITECTURE_DECISION_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_INDEX.md  BUSINESS_LOGIC_USER_PERSPECTIVE.md  CLI_DOCUMENTATION.md  CLI_DOCUMENTATION_CN.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_POINT_ARCHITECTURE_ANALYSIS.md  KNOWLEDGE_POINT_ARCHITECTURE_ANALYSIS_EN.md  KNOWLEDGE_POINT_MIGRATION_IMPROVEMENT.md  Learning_navegator.md  MARKET_RESEARCH_2026.md  MCP_IMPLEMENTATION.md  PRODUCT_ROADMAP_Q2_2026.md  SYLLABUS_NAVIGATOR_API.md  SYLLABUS_NAVIGATOR_FRONTEND_GUIDE.md  docs.go  swagger.json  swagger.yaml
harmonyos/: README.md  build-profile.json5  oh-package.json5
ios/: Package.swift  README.md
model/: admin.go  ai.go  (+52 more)
(+700 files in other folders)
